--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -210,4 +210,49 @@ body {
   }
 
   /****** Fim Alertas ******/
+
+  /* ========== Formulários ========== */
+  .form-label {
+    @apply text-gray-600 block text-sm font-semibold;
+  }
+
+  .form-input {
+    @apply border p-2 w-full mt-1 rounded-md border-gray-200 shadow-sm
+           focus:border-gray-300 focus:ring focus:ring-gray-200 focus:outline-none;
+  }
+
+  .form-select {
+    @apply border p-2 w-full mt-1 rounded-md border-gray-200 shadow-sm bg-white
+           text-gray-900 focus:border-gray-300 focus:ring focus:ring-gray-200 focus:outline-none cursor-pointer;
+  }
+
+  .form-input-checkbox {
+    @apply text-sm text-gray-500;
+  }
+
+  .form-input-error {
+    @apply text-red-500 text-sm mt-1;
+  }
+
+  .form-helper-text{
+    @apply ml-2 text-gray-700;
+  }
+
+  .required-field {
+    @apply text-xs text-gray-600;
+  }
+
+  .two-inputs-per-line {
+    @apply grid grid-cols-1 md:grid-cols-2 gap-4 mb-4;
+  }
+
+  .three-inputs-per-line {
+    @apply grid grid-cols-1 md:grid-cols-3 gap-4 mb-4;
+  }
+
+  .one-input-one-button-per-line {
+    @apply flex items-center space-x-2;
+  }
+
 }
+
